# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: linter.yml
gendiff/: __init__.py  comparator.py  generator.py
gendiff/core/: comparator.py  stylish.py
gendiff/output/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py  test_generate_diff_2.py
