[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "gendiff"
authors = ["dirty_hippy <piaiws@gmail.com>"]
repository = "https://github.com/DirtyHippy/python-project-lvl2.git"
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
autopep8 = "^1.5.7"
ipython = "^7.27.0"
pytest = "^6.2.5"
mypy = "^0.910"
pytest-cov = "^2.12.1"
types-PyYAML = "^5.4.10"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
